# backend/src/modules/auth/auth.routes.js
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { register, login, logout, getMe } from './auth.controller.js';
+import { register, login, logout, getMe, googleLogin } from './auth.controller.js';
 import { registerSchema, loginSchema } from './auth.validator.js';
 import { validate } from '../../common/middleware/validate.js';
 import { protect } from '../../common/middleware/auth.js';
@@ -9,6 +9,7 @@ const router = Router();
 
 router.post('/register', authLimiter, validate(registerSchema), register);
 router.post('/login', authLimiter, validate(loginSchema), login);
+router.post('/google', authLimiter, googleLogin);
 router.post('/logout', logout);
 router.get('/me', protect, getMe);
 
